2022-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asxxsrc/asmain.c,
	  sdas/asxxsrc/asxxxx.h:
	  Merge all kinds of .if directives from upstream ASxxxx.
	* sdas/asgb/gbpst.c:
	  Enable in sm83 for testing.

2022-03-09 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/peeph.def:
	  Add rules for redundant stores after loads.
	* device/lib/mos6502/crt0.s
	  Use ZP for memcpy and memset parameters.

2022-03-09 Philipp Klaus Krause <pkk AT spth.de>

	* Merge _BitInt branch.

2022-03-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  support/regression/tests/bitintbitfield.c:
	  Fix signed bit-precise bit-fields.

2022-03-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  src/SDCCsymt.h,
	  src/SDCCval.c,
	  src/stm8/gen.c,
	  support/regression/tests/bitint.c,
	  support/regression/tests/bitintarith.c:
	  Multiplicative operators for bit-precise integers.

2022-03-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  src/stm8/main.c:
	  Improve diagnostics for unimplemented bit-precise operators.

2022-03-09 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Fix corner cases in genPointerSet() and genPointerGet().

2022-03-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c,
	  src/SDCCval.c,
	  support/regression/tests/bitint.c,
	  support/regression/tests/bitintarith.c,
	  src/stm8/gen.c:
	  Various _BitInt fixes.

2022-03-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c,
	  src/SDCCsymt.c,
	  src/SDCCval.c:
	  Fix casts for bit-precise types.
	* src/stm8/gen.c:
	  Fix return of types with odd size greater than 4.
	* support/regression/tests/bitint.c,
	  support/regression/tests/bitintarith.c:
	  Somethings already work for _BitInt, so we can test them!

2022-03-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: fixed bug #3343

2022-03-08 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/peeph.def:
	  Minor peephole optimizations.
	* src/mos6502/gen.c: